--- a/homepage.html
+++ b/homepage.html
@@ -247,7 +247,7 @@
             <div class="sale-sp carousel-inner" role="listbox">
               <!-- Thêm các sp từ json -->
             </div>
-            <script src="../js/home.js"></script>
+            
             <div class="more-btn d-flex justify-content-center">
               <button class="btn-more btn btn-outline-success mt-5" onclick="window.location.href='product.html';">Xem thêm...</button>
             </div>
@@ -515,6 +515,6 @@
       integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
       crossorigin="anonymous"
     ></script>
-    
+    <script src="js/home.js"></script>
   </body>
 </html>
